baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__03_hir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 16488
---
=== HIR2 ===
class user.EdgeFoo {
  x: int
}
function user.add_assign() -> int  [expr] {
  { let x = 10; x Add= 5; return x }
}
function user.assign_in_loop() -> int  [expr] {
  { let sum = 0; let i = 0; while i Lt 5 { sum Add= i; i Add= 1 }; return sum }
}
function user.block_with_tail() -> int  [expr] {
  { let x = { let y = 1; let z = 2 } y Add z; return x }
}
function user.edge_call_then_index(foo: () -> int[]) -> int  [expr] {
  { foo()[0] } 1
}
function user.edge_call_then_parens(foo: () -> (int) -> int) -> int  [expr] {
  { foo()(1) } 2
}
function user.edge_let_call_then_index(bar: () -> int[]) -> int  [expr] {
  { let x = bar()[0] } x
}
function user.edge_semicolon_forces_boundary(bar: () -> int[]) -> int  [expr] {
  { bar(); [0] } 1
}
function user.edge_type_then_object() -> int  [expr] {
  {  } user.EdgeFoo { x: 1 }.x
}
function user.let_mixed_semicolons() -> int  [expr] {
  { let a = 1; let b = 2; let c = 3; let d = 4; return a Add b Add c Add d }
}
function user.let_no_semicolons() -> int  [expr] {
  { let x = 1; let y = 2; return x Add y }
}
function user.mul_assign() -> int  [expr] {
  { let x = 3; x Mul= 4; return x }
}
function user.multi_assign() -> int  [expr] {
  { let a = 1; let b = 2; a = 10; b = 20; return a Add b }
}
function user.simple_assign() -> int  [expr] {
  { let x = 1; x = 5; return x }
}
function user.sub_assign() -> int  [expr] {
  { let x = 10; x Sub= 3; return x }
}
function user.break_in_for() -> int  [expr] {
  { { let i = 0; while i Lt 10 { break } }; return 1 }
}
function user.break_with_locals() -> int  [expr] {
  { while true { let x = 1; if (true) { let y = 2; break } }; return 4 }
}
function user.continue_in_for() -> int  [expr] {
  { { let i = 0; while i Lt 10 { continue } }; return 2 }
}
function user.continue_with_locals() -> int  [expr] {
  { while true { let x = 1; if (true) { let y = 2; continue } }; return 5 }
}
function user.nested_break() -> int  [expr] {
  { while true { while true { break }; break }; return 3 }
}
function user.simple_break() -> int  [expr] {
  { while true { break }; return 42 }
}
function user.simple_continue() -> int  [expr] {
  { while true { continue }; return 0 }
}
function user.c_style_for_loop() -> int  [expr] {
  { let result = 0; { let i = 0; while i Lt 10 { result Add= i } }; return result }
}
function user.iterator_style_for_loop() -> int  [expr] {
  { let result = 0; for i in [1, 2, 3] { result Add= i }; return result }
}
function user.nested_for_loop() -> int  [expr] {
  { let result = 0; for i in [1, 2, 3] { for j in [4, 5, 6] { result Add= i Mul j } }; return result }
}
function user.ConditionalLogic(age: int) -> string  [expr] {
  {  } if (age Lt 18) { return "minor" } else if (age Lt 65) { return "adult" } else { return "senior" }
}
class user.Point {
  x: int
  y: int
}
function user.let_statements() -> int  [expr] {
  { let x = 1; let y: int = 2; let z: int[] = [1, 2, 3]; let point: user.Point = user.Point { x: 1, y: 2 }; return point.x Add point.y }
}
function user.nested_while_loop() -> int  [expr] {
  { let i = 0; while i Lt 10 { let j = 0; while j Lt 10 { j = j Add 1 } }; return i }
}
function user.simple_while_loop() -> int  [expr] {
  { let i = 0; while i Lt 10 { i = i Add 1 }; return i }
}
