baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.add_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = const 10_i64;
        _1 = copy _1 + const 5_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.assign_in_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // sum
    let _2: int // i
    let _3: bool
    let _4: int
    let _5: int

    bb0: {
        _1 = const 0_i64;
        _2 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _4 = copy _2;
        _3 = copy _4 < const 5_i64;
        branch copy _3 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _5 = copy _2;
        _1 = copy _1 + copy _5;
        _2 = copy _2 + const 1_i64;
        goto -> bb1;
    }
}

fn user.block_with_tail() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x
    let _2: int // y
    let _3: int // z
    let _4: int
    let _5: int

    bb0: {
        _2 = const 1_i64;
        _3 = const 2_i64;
        _4 = copy _2;
        _5 = copy _3;
        _1 = copy _4 + copy _5;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.edge_call_then_index(foo: () -> int[] throws never) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: () -> int[] throws never // foo // param
    let _2: int[]
    let _3: 0

    bb0: {
        _2 = call copy _1() -> [bb1];
    }

    bb1: {
        _3 = const 0_i64;
        _0 = const 1_i64;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.edge_call_then_parens(foo: () -> ((int) -> int throws never) throws never) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: () -> ((int) -> int throws never) throws never // foo // param
    let _2: int
    let _3: (int) -> int throws never

    bb0: {
        _3 = call copy _1() -> [bb1];
    }

    bb1: {
        _2 = call copy _3(const 1_i64) -> [bb2];
    }

    bb2: {
        _0 = const 2_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.edge_let_call_then_index(bar: () -> int[] throws never) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: () -> int[] throws never // bar // param
    let _2: int // x
    let _3: int[]
    let _4: 0

    bb0: {
        _3 = call copy _1() -> [bb1];
    }

    bb1: {
        _4 = const 0_i64;
        _2 = copy _3[_4];
        _0 = copy _2;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.edge_semicolon_forces_boundary(bar: () -> int[] throws never) -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: () -> int[] throws never // bar // param
    let _2: int[]

    bb0: {
        _2 = call copy _1() -> [bb1];
    }

    bb1: {
        _0 = const 1_i64;
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.edge_type_then_object() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: EdgeFoo

    bb0: {
        _1 = user.EdgeFoo { const 1_i64 };
        _0 = copy _1.0;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.EdgeFoo.from_json(j: baml.json.json) -> EdgeFoo {
    // Locals:
    let _0: EdgeFoo // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(EdgeFoo);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.let_mixed_semicolons() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // a
    let _2: int // b
    let _3: int // c
    let _4: int // d
    let _5: int
    let _6: int
    let _7: int
    let _8: int
    let _9: int
    let _10: int

    bb0: {
        _1 = const 1_i64;
        _2 = const 2_i64;
        _3 = const 3_i64;
        _4 = const 4_i64;
        _7 = copy _1;
        _8 = copy _2;
        _6 = copy _7 + copy _8;
        _9 = copy _3;
        _5 = copy _6 + copy _9;
        _10 = copy _4;
        _0 = copy _5 + copy _10;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.let_no_semicolons() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x
    let _2: int // y
    let _3: int
    let _4: int

    bb0: {
        _1 = const 1_i64;
        _2 = const 2_i64;
        _3 = copy _1;
        _4 = copy _2;
        _0 = copy _3 + copy _4;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.mul_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = const 3_i64;
        _1 = copy _1 * const 4_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.multi_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // a
    let _2: int // b
    let _3: int
    let _4: int

    bb0: {
        _1 = const 1_i64;
        _2 = const 2_i64;
        _1 = const 10_i64;
        _2 = const 20_i64;
        _3 = copy _1;
        _4 = copy _2;
        _0 = copy _3 + copy _4;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.simple_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = const 1_i64;
        _1 = const 5_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.sub_assign() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // x

    bb0: {
        _1 = const 10_i64;
        _1 = copy _1 - const 3_i64;
        _0 = copy _1;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.EdgeFoo.to_json(self: EdgeFoo) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: EdgeFoo // self // param
    let _2: baml.json.json
    let _3: int
    let _4: EdgeFoo

    bb0: {
        _4 = copy _1;
        _3 = copy _4.0;
        _2 = call const fn baml.Int.to_json(copy _3) -> [bb1];
    }

    bb1: {
        _0 = { const "x": copy _2 };
        goto -> bb2;
    }

    bb2: {
        return;
    }
}

fn user.break_in_for() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // i
    let _2: bool
    let _3: int

    bb0: {
        _1 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb2, bb2];
    }

    bb2: {
        _0 = const 1_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.break_with_locals() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb2, bb3];
    }

    bb2: {
        branch const true -> [bb3, bb1];
    }

    bb3: {
        _0 = const 4_i64;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.continue_in_for() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // i
    let _2: bool
    let _3: int
    let _4: int

    bb0: {
        _1 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb4, bb2];
    }

    bb2: {
        _0 = const 2_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _4 = copy _1;
        _1 = copy _4 + const 1_i64;
        goto -> bb1;
    }
}

fn user.continue_with_locals() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb4, bb2];
    }

    bb2: {
        _0 = const 5_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        branch const true -> [bb1, bb1];
    }
}

fn user.nested_break() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb2, bb3];
    }

    bb2: {
        branch const true -> [bb3, bb3];
    }

    bb3: {
        _0 = const 3_i64;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.simple_break() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb2, bb2];
    }

    bb2: {
        _0 = const 42_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.simple_continue() -> int {
    // Locals:
    let _0: int // _0 // return

    bb0: {
        goto -> bb1;
    }

    bb1: {
        branch const true -> [bb1, bb2];
    }

    bb2: {
        _0 = const 0_i64;
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.c_style_for_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // result
    let _2: int // i
    let _3: bool
    let _4: int
    let _5: int

    bb0: {
        _1 = const 0_i64;
        _2 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _4 = copy _2;
        _3 = copy _4 < const 10_i64;
        branch copy _3 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _5 = copy _2;
        _1 = copy _1 + copy _5;
        goto -> bb5;
    }

    bb5: {
        _2 = copy _2 + const 1_i64;
        goto -> bb1;
    }
}

fn user.iterator_style_for_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // result
    let _2: int[]
    let _3: int // __for_idx
    let _4: int
    let _5: bool
    let _6: int
    let _7: int // i
    let _8: int

    bb0: {
        _1 = const 0_i64;
        _2 = [const 1_i64, const 2_i64, const 3_i64];
        _3 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _4 = len(_2);
        _5 = copy _3 < copy _4;
        branch copy _5 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _6 = copy _2[_3];
        fresh_cell(_7);
        _7 = copy _6;
        _8 = copy _7;
        _1 = copy _1 + copy _8;
        goto -> bb5;
    }

    bb5: {
        _3 = copy _3 + const 1_i64;
        goto -> bb1;
    }
}

fn user.nested_for_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // result
    let _2: int[]
    let _3: int // __for_idx
    let _4: int
    let _5: bool
    let _6: int
    let _7: int // i
    let _8: int[]
    let _9: int // __for_idx_1
    let _10: int
    let _11: bool
    let _12: int
    let _13: int // j
    let _14: int
    let _15: int
    let _16: int

    bb0: {
        _1 = const 0_i64;
        _2 = [const 1_i64, const 2_i64, const 3_i64];
        _3 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _4 = len(_2);
        _5 = copy _3 < copy _4;
        branch copy _5 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _6 = copy _2[_3];
        fresh_cell(_7);
        _7 = copy _6;
        _8 = [const 4_i64, const 5_i64, const 6_i64];
        _9 = const 0_i64;
        goto -> bb5;
    }

    bb5: {
        _10 = len(_8);
        _11 = copy _9 < copy _10;
        branch copy _11 -> [bb7, bb6];
    }

    bb6: {
        _3 = copy _3 + const 1_i64;
        goto -> bb1;
    }

    bb7: {
        _12 = copy _8[_9];
        fresh_cell(_13);
        _13 = copy _12;
        _15 = copy _7;
        _16 = copy _13;
        _14 = copy _15 * copy _16;
        _1 = copy _1 + copy _14;
        goto -> bb8;
    }

    bb8: {
        _9 = copy _9 + const 1_i64;
        goto -> bb5;
    }
}

fn user.ConditionalLogic(age: int) -> string {
    // Locals:
    let _0: string // _0 // return
    let _1: int // age // param
    let _2: bool
    let _3: bool

    bb0: {
        _2 = copy _1 < const 18_i64;
        branch copy _2 -> [bb4, bb1];
    }

    bb1: {
        _3 = copy _1 < const 65_i64;
        branch copy _3 -> [bb3, bb2];
    }

    bb2: {
        _0 = const "senior";
        goto -> bb5;
    }

    bb3: {
        _0 = const "adult";
        goto -> bb5;
    }

    bb4: {
        _0 = const "minor";
        goto -> bb5;
    }

    bb5: {
        return;
    }
}

fn user.Point.from_json(j: baml.json.json) -> Point {
    // Locals:
    let _0: Point // _0 // return
    let _1: baml.json.json // j // param
    let _2: string
    let _3: type

    bb0: {
        _2 = call const fn baml.json.stringify(copy _1) -> [bb1];
    }

    bb1: {
        _3 = load_type(Point);
        _0 = call const fn baml.json.from_string<copy _3>(copy _2) -> [bb2];
    }

    bb2: {
        return;
    }
}

fn user.let_statements() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: Point // point
    let _2: int
    let _3: int

    bb0: {
        _1 = user.Point { const 1_i64, const 2_i64 };
        _2 = copy _1.0;
        _3 = copy _1.1;
        _0 = copy _2 + copy _3;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}

fn user.Point.to_json(self: Point) -> baml.json.json {
    // Locals:
    let _0: baml.json.json // _0 // return
    let _1: Point // self // param
    let _2: baml.json.json
    let _3: int
    let _4: Point
    let _5: baml.json.json
    let _6: int
    let _7: Point

    bb0: {
        _4 = copy _1;
        _3 = copy _4.0;
        _2 = call const fn baml.Int.to_json(copy _3) -> [bb1];
    }

    bb1: {
        _7 = copy _1;
        _6 = copy _7.1;
        _5 = call const fn baml.Int.to_json(copy _6) -> [bb2];
    }

    bb2: {
        _0 = { const "x": copy _2, const "y": copy _5 };
        goto -> bb3;
    }

    bb3: {
        return;
    }
}

fn user.nested_while_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // i
    let _2: bool
    let _3: int
    let _4: int // j
    let _5: bool
    let _6: int
    let _7: int

    bb0: {
        _1 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _4 = const 0_i64;
        goto -> bb5;
    }

    bb5: {
        _6 = copy _4;
        _5 = copy _6 < const 10_i64;
        branch copy _5 -> [bb6, bb1];
    }

    bb6: {
        _7 = copy _4;
        _4 = copy _7 + const 1_i64;
        goto -> bb5;
    }
}

fn user.simple_while_loop() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: int // i
    let _2: bool
    let _3: int
    let _4: int

    bb0: {
        _1 = const 0_i64;
        goto -> bb1;
    }

    bb1: {
        _3 = copy _1;
        _2 = copy _3 < const 10_i64;
        branch copy _2 -> [bb4, bb2];
    }

    bb2: {
        _0 = copy _1;
        goto -> bb3;
    }

    bb3: {
        return;
    }

    bb4: {
        _4 = copy _1;
        _1 = copy _4 + const 1_i64;
        goto -> bb1;
    }
}
