baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 16719
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
