baml_language/crates/baml_tests/snapshots/compiles/parser_statements/baml_tests__compiles__parser_statements__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.ConditionalLogic(age: int) -> string {
    load_var age
    load_const 18
    cmp_op <
    pop_jump_if_false L0
    jump L3

  L0:
    load_var age
    load_const 65
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_const "senior"
    jump L4

  L2:
    load_const "adult"
    jump L4

  L3:
    load_const "minor"

  L4:
    return
}

function user.EdgeFoo.from_json(j: baml.json.json) -> EdgeFoo {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type EdgeFoo
    load_var _2
    call baml.json.from_string
    return
}

function user.EdgeFoo.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .x
    call baml.Int.to_json
    load_const "x"
    alloc_map 1
    return
}

function user.Point.from_json(j: baml.json.json) -> Point {
    load_var j
    call baml.json.stringify
    store_var _2
    load_type Point
    load_var _2
    call baml.json.from_string
    return
}

function user.Point.to_json(self: null) -> baml.json.json {
    load_var self
    load_field .x
    call baml.Int.to_json
    store_var _2
    load_var self
    load_field .y
    call baml.Int.to_json
    store_var _5
    load_var _2
    load_var _5
    load_const "x"
    load_const "y"
    alloc_map 2
    return
}

function user.add_assign() -> int {
    load_const 10
    store_var x
    load_var x
    load_const 5
    add_int
    store_var x
    load_var x
    return
}

function user.assign_in_loop() -> int {
    load_const 0
    store_var sum
    load_const 0
    store_var i

  L0:
    load_var i
    load_const 5
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_var sum
    return

  L2:
    load_var sum
    load_var i
    add_int
    store_var sum
    load_var i
    load_const 1
    add_int
    store_var i
    jump L0
}

function user.block_with_tail() -> int {
    load_const 1
    load_const 2
    bin_op +
    return
}

function user.break_in_for() -> int {
    load_const 0
    load_const 10
    cmp_op <
    pop_jump_if_false L0

  L0:
    load_const 1
    return
}

function user.break_with_locals() -> int {
  L0:
    load_const true
    pop_jump_if_false L1
    load_const true
    pop_jump_if_false L0

  L1:
    load_const 4
    return
}

function user.c_style_for_loop() -> int {
    load_const 0
    store_var result
    load_const 0
    store_var i

  L0:
    load_var i
    load_const 10
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_var result
    return

  L2:
    load_var result
    load_var i
    add_int
    store_var result
    load_var i
    load_const 1
    add_int
    store_var i
    jump L0
}

function user.continue_in_for() -> int {
    load_const 0
    store_var i

  L0:
    load_var i
    load_const 10
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_const 2
    return

  L2:
    load_var i
    load_const 1
    add_int
    store_var i
    jump L0
}

function user.continue_with_locals() -> int {
  L0:
    load_const true
    pop_jump_if_false L1
    jump L2

  L1:
    load_const 5
    return

  L2:
    load_const true
    pop_jump_if_false L0
    jump L0
}

function user.edge_call_then_index(foo: () -> int[] throws never) -> int {
    load_var foo
    call_indirect
    pop 1
    load_const 1
    return
}

function user.edge_call_then_parens(foo: () -> ((int) -> int throws never) throws never) -> int {
    load_var foo
    call_indirect
    store_var _3
    load_const 1
    load_var _3
    call_indirect
    pop 1
    load_const 2
    return
}

function user.edge_let_call_then_index(bar: () -> int[] throws never) -> int {
    load_var bar
    call_indirect
    load_const 0
    load_array_element
    return
}

function user.edge_semicolon_forces_boundary(bar: () -> int[] throws never) -> int {
    load_var bar
    call_indirect
    pop 1
    load_const 1
    return
}

function user.edge_type_then_object() -> int {
    alloc_instance user.EdgeFoo
    load_const 1
    init_field .x
    load_field .x
    return
}

function user.iterator_style_for_loop() -> int {
    load_const 0
    store_var result
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    store_var _2
    load_const 0
    store_var __for_idx

  L0:
    load_var __for_idx
    load_var _2
    call baml.Array.length
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_var result
    return

  L2:
    load_var result
    load_var _2
    load_var __for_idx
    load_array_element
    add_int
    store_var result
    load_var __for_idx
    load_const 1
    add_int
    store_var __for_idx
    jump L0
}

function user.let_mixed_semicolons() -> int {
    load_const 1
    load_const 2
    bin_op +
    load_const 3
    bin_op +
    load_const 4
    bin_op +
    return
}

function user.let_no_semicolons() -> int {
    load_const 1
    load_const 2
    bin_op +
    return
}

function user.let_statements() -> int {
    alloc_instance user.Point
    load_const 1
    init_field .x
    load_const 2
    init_field .y
    store_var point
    load_var point
    load_field .x
    load_var point
    load_field .y
    bin_op +
    return
}

function user.mul_assign() -> int {
    load_const 3
    store_var x
    load_var x
    load_const 4
    mul_int
    store_var x
    load_var x
    return
}

function user.multi_assign() -> int {
    load_const 1
    store_var a
    load_const 2
    store_var b
    load_const 10
    store_var a
    load_const 20
    store_var b
    load_var a
    load_var b
    add_int
    return
}

function user.nested_break() -> int {
    load_const true
    pop_jump_if_false L0
    load_const true
    pop_jump_if_false L0

  L0:
    load_const 3
    return
}

function user.nested_for_loop() -> int {
    load_const 0
    store_var result
    load_const 1
    load_const 2
    load_const 3
    alloc_array 3
    store_var _2
    load_const 0
    store_var __for_idx

  L0:
    load_var __for_idx
    load_var _2
    call baml.Array.length
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_var result
    return

  L2:
    load_var _2
    load_var __for_idx
    load_array_element
    store_var i
    load_const 4
    load_const 5
    load_const 6
    alloc_array 3
    store_var _8
    load_const 0
    store_var __for_idx_1

  L3:
    load_var __for_idx_1
    load_var _8
    call baml.Array.length
    cmp_op <
    pop_jump_if_false L4
    jump L5

  L4:
    load_var __for_idx
    load_const 1
    add_int
    store_var __for_idx
    jump L0

  L5:
    load_var result
    load_var i
    load_var _8
    load_var __for_idx_1
    load_array_element
    bin_op *
    add_int
    store_var result
    load_var __for_idx_1
    load_const 1
    add_int
    store_var __for_idx_1
    jump L3
}

function user.nested_while_loop() -> int {
  L0:
    load_const 0
    load_const 10
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_const 0
    return

  L2:
    load_const 0
    store_var j

  L3:
    load_var j
    load_const 10
    cmp_op <
    pop_jump_if_false L0
    load_var j
    load_const 1
    add_int
    store_var j
    jump L3
}

function user.simple_assign() -> int {
    load_const 1
    store_var x
    load_const 5
    store_var x
    load_var x
    return
}

function user.simple_break() -> int {
    load_const true
    pop_jump_if_false L0

  L0:
    load_const 42
    return
}

function user.simple_continue() -> int {
  L0:
    load_const true
    pop_jump_if_false L1
    jump L0

  L1:
    load_const 0
    return
}

function user.simple_while_loop() -> int {
    load_const 0
    store_var i

  L0:
    load_var i
    load_const 10
    cmp_op <
    pop_jump_if_false L1
    jump L2

  L1:
    load_var i
    return

  L2:
    load_var i
    load_const 1
    add_int
    store_var i
    jump L0
}

function user.sub_assign() -> int {
    load_const 10
    store_var x
    load_var x
    load_const 3
    sub_int
    store_var x
    load_var x
    return
}
